--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </header>
         <main>
             <p>Este proyecto está dedicado a explicar y analizar la huella de carbono de los productos CADIS.</p>
+            <p>Saludos a Vaneza, Valeria, Dante, Anelis y mamita.</p>
             <form>
                 <div class="form-group">
                     <label for="energyConsumption">Consumo de Energía Eléctrica</label>
