--- a/index.html
+++ b/index.html
@@ -30,41 +30,99 @@
         <main>
             <p>Este proyecto está dedicado a explicar y analizar la huella de carbono de los productos CADIS.</p>
             <p>Saludos a Vaneza, Valeria, Dante, Anelis y mamita.</p>
-            <form>
-                <div class="form-group">
-                    <label for="householdMembers">¿Cuántas personas viven en tu casa?</label>
-                    <input type="text" class="form-control" id="householdMembers" placeholder="Ingrese el número de personas" oninput="validateNumberInput(this)">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="form-group">
+                            <label for="householdMembers">¿Cuántas personas viven en tu casa?</label>
+                            <input type="text" class="form-control" id="householdMembers" placeholder="Ingrese el número de personas" oninput="validateNumberInput(this)">
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('prev')">Anterior</button>
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('next')">Siguiente</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="form-group">
+                            <label for="electricityCost">¿Cuánto pagas al mes por el servicio de energía eléctrica?</label>
+                            <input type="text" class="form-control" id="electricityCost" placeholder="Ingrese el costo mensual" oninput="validateNumberInput(this)">
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('prev')">Anterior</button>
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('next')">Siguiente</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="form-group">
+                            <label for="waterCost">¿Cuánto pagas al mes por el servicio de agua potable?</label>
+                            <input type="text" class="form-control" id="waterCost" placeholder="Ingrese el costo mensual" oninput="validateNumberInput(this)">
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('prev')">Anterior</button>
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('next')">Siguiente</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="form-group">
+                            <label for="gasCost">¿Cuánto pagas al mes por el servicio de gas natural?</label>
+                            <input type="text" class="form-control" id="gasCost" placeholder="Ingrese el costo mensual" oninput="validateNumberInput(this)">
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('prev')">Anterior</button>
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('next')">Siguiente</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="form-group">
+                            <label for="fuelCost">¿Cuánto pagas a la semana por el consumo de combustible en tu automóvil?</label>
+                            <input type="text" class="form-control" id="fuelCost" placeholder="Ingrese el costo semanal" oninput="validateNumberInput(this)">
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('prev')">Anterior</button>
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('next')">Siguiente</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="form-group">
+                            <label for="publicTransportUsage">¿Cuántas veces a la semana utilizas el transporte público?</label>
+                            <input type="text" class="form-control" id="publicTransportUsage" placeholder="Ingrese el número de veces" oninput="validateNumberInput(this)">
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('prev')">Anterior</button>
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('next')">Siguiente</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="form-group">
+                            <label for="domesticFlights">¿Cuántas veces al año viajas en avión a destinos nacionales?</label>
+                            <input type="text" class="form-control" id="domesticFlights" placeholder="Ingrese el número de veces" oninput="validateNumberInput(this)">
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('prev')">Anterior</button>
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('next')">Siguiente</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="form-group">
+                            <label for="internationalFlights">¿Cuántas veces al año viajas en avión a destinos internacionales?</label>
+                            <input type="text" class="form-control" id="internationalFlights" placeholder="Ingrese el número de veces" oninput="validateNumberInput(this)">
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('prev')">Anterior</button>
+                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('next')">Siguiente</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="electricityCost">¿Cuánto pagas al mes por el servicio de energía eléctrica?</label>
-                    <input type="text" class="form-control" id="electricityCost" placeholder="Ingrese el costo mensual" oninput="validateNumberInput(this)">
-                </div>
-                <div class="form-group">
-                    <label for="waterCost">¿Cuánto pagas al mes por el servicio de agua potable?</label>
-                    <input type="text" class="form-control" id="waterCost" placeholder="Ingrese el costo mensual" oninput="validateNumberInput(this)">
-                </div>
-                <div class="form-group">
-                    <label for="gasCost">¿Cuánto pagas al mes por el servicio de gas natural?</label>
-                    <input type="text" class="form-control" id="gasCost" placeholder="Ingrese el costo mensual" oninput="validateNumberInput(this)">
-                </div>
-                <div class="form-group">
-                    <label for="fuelCost">¿Cuánto pagas a la semana por el consumo de combustible en tu automóvil?</label>
-                    <input type="text" class="form-control" id="fuelCost" placeholder="Ingrese el costo semanal" oninput="validateNumberInput(this)">
-                </div>
-                <div class="form-group">
-                    <label for="publicTransportUsage">¿Cuántas veces a la semana utilizas el transporte público?</label>
-                    <input type="text" class="form-control" id="publicTransportUsage" placeholder="Ingrese el número de veces" oninput="validateNumberInput(this)">
-                </div>
-                <div class="form-group">
-                    <label for="domesticFlights">¿Cuántas veces al año viajas en avión a destinos nacionales?</label>
-                    <input type="text" class="form-control" id="domesticFlights" placeholder="Ingrese el número de veces" oninput="validateNumberInput(this)">
-                </div>
-                <div class="form-group">
-                    <label for="internationalFlights">¿Cuántas veces al año viajas en avión a destinos internacionales?</label>
-                    <input type="text" class="form-control" id="internationalFlights" placeholder="Ingrese el número de veces" oninput="validateNumberInput(this)">
-                </div>
-                <button type="button" class="btn btn-primary" onclick="calculateCarbonFootprint()">Calcular Huella de Carbono</button>
-            </form>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+            <button type="button" class="btn btn-primary mt-3" onclick="calculateCarbonFootprint()">Calcular Huella de Carbono</button>
             <div class="mt-3">
                 <p id="result"></p>
             </div>
@@ -127,6 +185,13 @@
                 }
             }());
         }
+
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                event.preventDefault();
+                $('#carouselExampleIndicators').carousel('next');
+            }
+        });
     </script>
 </body>
 </html>
