--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                             <label for="householdMembers">¿Cuántas personas viven en tu casa?</label>
                             <input type="text" class="form-control" id="householdMembers" placeholder="Ingrese el número de personas" oninput="validateNumberInput(this)">
                         </div>
-                        <div class="d-flex justify-content-between">
-                            <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('prev')">Anterior</button>
+                        <div class="d-flex justify-content-end">
                             <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('next')">Siguiente</button>
                         </div>
                     </div>
@@ -110,19 +109,17 @@
                         <div class="d-flex justify-content-between">
                             <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('prev')">Anterior</button>
                             <button class="btn btn-secondary" onclick="$('#carouselExampleIndicators').carousel('next')">Siguiente</button>
+
                         </div>
                     </div>
+                    <div class="carousel-item">
+                        <button class="btn btn-primary" onclick="calculateCarbonFootprint()">Calcular Huella de Carbono</button>
+
+                    </div>
+
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+                
             </div>
-            <button type="button" class="btn btn-primary mt-3" onclick="calculateCarbonFootprint()">Calcular Huella de Carbono</button>
             <div class="mt-3">
                 <p id="result"></p>
             </div>
@@ -142,6 +139,7 @@
         }
 
         function calculateCarbonFootprint() {
+            debugger
             const householdMembers = parseFloat(document.getElementById('householdMembers').value);
             const electricityCost = parseFloat(document.getElementById('electricityCost').value);
             const waterCost = parseFloat(document.getElementById('waterCost').value);
