--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
+                        <h2>ENERGÍA ELÉCTRICA</h2>
                         <div class="form-group">
                             <label for="electricityCost">¿Cuánto pagas al mes por el servicio de energía eléctrica?</label>
                             <input type="text" class="form-control" id="electricityCost" placeholder="Ingrese el costo mensual" oninput="validateNumberInput(this)">
@@ -52,6 +53,8 @@
                         </div>
                     </div>
                     <div class="carousel-item">
+                        <h2>AGUA POTABLE</h2>
+                        <p>Incluye el consumo de agua de pipas y de la red.</p>
                         <div class="form-group">
                             <label for="waterCost">¿Cuánto pagas al mes por el servicio de agua potable?</label>
                             <input type="text" class="form-control" id="waterCost" placeholder="Ingrese el costo mensual" oninput="validateNumberInput(this)">
@@ -62,6 +65,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
+                        <h2>GAS NATURAL</h2>
                         <div class="form-group">
                             <label for="gasCost">¿Cuánto pagas al mes por el servicio de gas natural?</label>
                             <input type="text" class="form-control" id="gasCost" placeholder="Ingrese el costo mensual" oninput="validateNumberInput(this)">
@@ -72,6 +76,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
+                        <h2>TRANSPORTE PRIVADO</h2>
                         <div class="form-group">
                             <label for="fuelCost">¿Cuánto pagas a la semana por el consumo de combustible en tu automóvil?</label>
                             <input type="text" class="form-control" id="fuelCost" placeholder="Ingrese el costo semanal" oninput="validateNumberInput(this)">
