--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     document.addEventListener('keydown', function(event) {
         if (event.key === 'Enter') {
             event.preventDefault();
-            $('#carouselExampleIndicators').carousel('next');
+          //  $('#carouselExampleIndicators').carousel('next');
         }
     });
 </script>
